testdata/cases/analyze/dangerous_directory_removal.expected
error[dangerous-directory-removal]: os.RemoveAll receives the entire temporary directory from os.TempDir; remove only an application-owned subdirectory
  ┌─ testdata/cases/analyze/dangerous_directory_removal.go:7:21
  │
7 │ 	return os.RemoveAll(directory)
  │ 	                   ^^^^^^^^^^^

found 1 issue: 1 error
